# PolinomaLab

./: CMakeLists.txt  README.md
TFraction/: CMakeLists.txt  TFroction.h
TMonoms/: CMakeLists.txt  TMonoms.cpp  TMonoms.h
TPolinoms/: CMakeLists.txt
list/: list.h
main/: main.cpp
tests/: test_Fraction.cpp  test_TMonoms.cpp
